--- a/Preview-Card/style.css
+++ b/Preview-Card/style.css
@@ -2,6 +2,15 @@ body {
     background-color: hsl(217, 54%, 11%);
 }
 
+.preview-card-body{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    position: relative;
+    top: 150px;
+}
+
 .preview-card-photo {
     background-color: hsl(216, 50%, 16%);
     width: 350px;
@@ -19,5 +28,19 @@ body {
     width: 90%;
     position: relative;
     top: 10px;
+
+}
+
+.preview-card-text {
+
+}
+
+h2 {
+    color: hsl(178, 100%, 50%);
+}
+
+.preview-card-description {
+    color: hsl(215, 51%, 70%);
+    font-size: 18px;
 
 }
