--- a/Preview-Card/style.css
+++ b/Preview-Card/style.css
@@ -63,11 +63,15 @@ h2 {
     font-family: 'Outfit', sans-serif;
     color: hsl(178, 100%, 50%);
     font-size: 11px;
+    font-weight: 600;
+    display: inline;
+    
 }
 
 .time-frame-text {
     font-family: 'Outfit', sans-serif;
     color: hsl(215, 51%, 70%);
     font-size: 11px;
+    font-weight: 600;
+    display: inline;
 }
-
