--- a/Preview-Card/style.css
+++ b/Preview-Card/style.css
@@ -16,7 +16,7 @@ body {
 .preview-card-photo {
     background-color: hsl(216, 50%, 16%);
     width: 350px;
-    height: 580px;
+    height: 550px;
     border-radius: 12px;
 }
 
@@ -59,14 +59,16 @@ h2 {
     font-weight: 600;
     display: inline;
     float: left;
-    
 }
 
 .horizontal-line {
-    height:2px;
+    height: 2px;
+    width: 290px;
     border-width:0;
     color:gray;
     background-color:hsl(215, 32%, 27%);
+    position: relative;
+    top: 20px;
 }
 
 .time-frame-text {
@@ -103,7 +105,8 @@ h2 {
     font-family: 'Outfit', sans-serif;
     color: hsl(215, 51%, 70%);
     font-size: 11px;
-    font-weight: 600;
+    font-weight: 400;
+    float: left;
 }
 
 .preview-card-creator-blue-text{
@@ -112,5 +115,7 @@ h2 {
     font-size: 11px;
 }
 .preview-card-bottom-text {
+    position: absolute;
+    top: 500px;
     
 }
